implement generic oauth-consumer module

--- a/component/common/src/main/java/conf/configuration-tomcat.properties
+++ b/component/common/src/main/java/conf/configuration-tomcat.properties
@@ -89,3 +89,36 @@ gatein.sso.enabled=false
 #gatein.assets.version=PORTAL-VERSION
 #gatein.assets.script.max-age=604800
 #gatein.assets.css.max-age=604800
+
+
+gatein.oauth.portal.url=http://localhost:8080
+## Google
+gatein.oauth.google.enabled=true
+gatein.oauth.google.clientId=173082761804-me0jpjagmmog3glpbuu5nmh2i1ao9qgr.apps.googleusercontent.com
+gatein.oauth.google.clientSecret=1HjREgddAfrNYmb6hH0MgiHU
+gatein.oauth.google.redirectURL=${gatein.oauth.portal.url}/@@portal.container.name@@/googleAuth
+gatein.oauth.google.accessType=offline
+
+gatein.oauth.google.enable=true
+gatein.oauth.google.apiKey=173082761804-me0jpjagmmog3glpbuu5nmh2i1ao9qgr.apps.googleusercontent.com
+gatein.oauth.google.apiSecret=1HjREgddAfrNYmb6hH0MgiHU
+gatein.oauth.google.version=2.0
+gatein.oauth.google.accessTokenEndpoint=https://accounts.google.com/o/oauth2/token
+gatein.oauth.google.authorizationURL=https://accounts.google.com/o/oauth2/auth
+gatein.oauth.google.scope=https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile
+
+gatein.oauth.twitter.enable=true
+gatein.oauth.twitter.apiKey=YTLBBzumiGNPyQIQ8O7qJg
+gatein.oauth.twitter.apiSecret=Onc8rI6hRxntBpslnXJASyEBSt3zjB9OTnFzfWbs
+#gatein.oauth.twitter.apiClass=org.scribe.builder.api.TwitterApi$SSL
+gatein.oauth.twitter.requestTokenEndpoint=https://api.twitter.com/oauth/request_token
+gatein.oauth.twitter.accessTokenEndpoint=https://api.twitter.com/oauth/access_token
+gatein.oauth.twitter.authorizationURL=https://api.twitter.com/oauth/authorize
+
+gatein.oauth.linkedin.enable=true
+gatein.oauth.linkedin.apiKey=75qjzvlua1657f
+gatein.oauth.linkedin.apiSecret=Nw0tjirXReiOeJkw
+gatein.oauth.linkedin.requestTokenEndpoint=https://api.linkedin.com/uas/oauth/requestToken
+gatein.oauth.linkedin.accessTokenEndpoint=https://api.linkedin.com/uas/oauth/accessToken
+gatein.oauth.linkedin.authorizationURL=https://api.linkedin.com/uas/oauth/authenticate
+
