--- a/packaging/tomcat/pkg/pom.xml
+++ b/packaging/tomcat/pkg/pom.xml
@@ -354,6 +354,16 @@
       <artifactId>gatein-management-rest</artifactId>
     </dependency>
 
+    <!-- GateIn OAuth -->
+    <dependency>
+      <groupId>org.gatein.portal</groupId>
+      <artifactId>exo.portal.component.web.oauth</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.scribe</groupId>
+      <artifactId>scribe</artifactId>
+    </dependency>
+
     <!-- Staxnav -->
     <dependency>
       <groupId>org.staxnav</groupId>
