--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,8 @@
     <version.yuicompressor-maven-plugin>0.7.1</version.yuicompressor-maven-plugin>
     <version.plugin.japex>1.2.3</version.plugin.japex>
 
+    <!-- to move to gatein-dep -->
+    <version.scribe>1.3.5</version.scribe>
 
   </properties>
 
@@ -520,6 +522,19 @@
         <artifactId>exo.portal.component.web.resources</artifactId>
         <version>4.2.x-PLF-SNAPSHOT</version>
       </dependency>
+
+      <!-- OAuth -->
+      <dependency>
+        <groupId>org.scribe</groupId>
+        <artifactId>scribe</artifactId>
+        <version>${version.scribe}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gatein.portal</groupId>
+        <artifactId>exo.portal.component.web.oauth</artifactId>
+        <version>4.2.x-PLF-SNAPSHOT</version>
+      </dependency>
+
       <dependency>
         <groupId>org.gatein.portal</groupId>
         <artifactId>exo.portal.component.portal</artifactId>
