add provider registry service and enable plugin add consumer/provider

--- a/component/common/src/main/java/conf/configuration-tomcat.properties
+++ b/component/common/src/main/java/conf/configuration-tomcat.properties
@@ -92,6 +92,24 @@ gatein.sso.enabled=false
 
 
 gatein.oauth.portal.url=http://localhost:8080
+
+## Google provider
+gatein.oauth.provider.google.enable=true
+gatein.oauth.provider.google.version=2.0
+gatein.oauth.provider.google.accessTokenEndpoint=https://accounts.google.com/o/oauth2/token
+gatein.oauth.provider.google.authorizationURL=https://accounts.google.com/o/oauth2/auth
+
+gatein.oauth.provider.twitter.enable=true
+gatein.oauth.provider.twitter.requestTokenEndpoint=https://api.twitter.com/oauth/request_token
+gatein.oauth.provider.twitter.accessTokenEndpoint=https://api.twitter.com/oauth/access_token
+gatein.oauth.provider.twitter.authorizationURL=https://api.twitter.com/oauth/authorize
+
+gatein.oauth.provider.linkedin.enable=true
+gatein.oauth.provider.linkedin.requestTokenEndpoint=https://api.linkedin.com/uas/oauth/requestToken
+gatein.oauth.provider.linkedin.accessTokenEndpoint=https://api.linkedin.com/uas/oauth/accessToken
+gatein.oauth.provider.linkedin.authorizationURL=https://api.linkedin.com/uas/oauth/authenticate
+
+
 ## Google
 gatein.oauth.google.enabled=true
 gatein.oauth.google.clientId=173082761804-me0jpjagmmog3glpbuu5nmh2i1ao9qgr.apps.googleusercontent.com
@@ -99,26 +117,17 @@ gatein.oauth.google.clientSecret=1HjREgddAfrNYmb6hH0MgiHU
 gatein.oauth.google.redirectURL=${gatein.oauth.portal.url}/@@portal.container.name@@/googleAuth
 gatein.oauth.google.accessType=offline
 
-gatein.oauth.google.enable=true
-gatein.oauth.google.apiKey=173082761804-me0jpjagmmog3glpbuu5nmh2i1ao9qgr.apps.googleusercontent.com
-gatein.oauth.google.apiSecret=1HjREgddAfrNYmb6hH0MgiHU
-gatein.oauth.google.version=2.0
-gatein.oauth.google.accessTokenEndpoint=https://accounts.google.com/o/oauth2/token
-gatein.oauth.google.authorizationURL=https://accounts.google.com/o/oauth2/auth
-gatein.oauth.google.scope=https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile
+gatein.oauth.consumer.google.enable=true
+gatein.oauth.consumer.google.provider=google1
+gatein.oauth.consumer.google.apiKey=173082761804-me0jpjagmmog3glpbuu5nmh2i1ao9qgr.apps.googleusercontent.com
+gatein.oauth.consumer.google.apiSecret=1HjREgddAfrNYmb6hH0MgiHU
+gatein.oauth.consumer.google.scope=https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile
 
-gatein.oauth.twitter.enable=true
-gatein.oauth.twitter.apiKey=YTLBBzumiGNPyQIQ8O7qJg
-gatein.oauth.twitter.apiSecret=Onc8rI6hRxntBpslnXJASyEBSt3zjB9OTnFzfWbs
-#gatein.oauth.twitter.apiClass=org.scribe.builder.api.TwitterApi$SSL
-gatein.oauth.twitter.requestTokenEndpoint=https://api.twitter.com/oauth/request_token
-gatein.oauth.twitter.accessTokenEndpoint=https://api.twitter.com/oauth/access_token
-gatein.oauth.twitter.authorizationURL=https://api.twitter.com/oauth/authorize
+gatein.oauth.consumer.twitter.enable=true
+gatein.oauth.consumer.twitter.apiKey=YTLBBzumiGNPyQIQ8O7qJg
+gatein.oauth.consumer.twitter.apiSecret=Onc8rI6hRxntBpslnXJASyEBSt3zjB9OTnFzfWbs
 
-gatein.oauth.linkedin.enable=true
-gatein.oauth.linkedin.apiKey=75qjzvlua1657f
-gatein.oauth.linkedin.apiSecret=Nw0tjirXReiOeJkw
-gatein.oauth.linkedin.requestTokenEndpoint=https://api.linkedin.com/uas/oauth/requestToken
-gatein.oauth.linkedin.accessTokenEndpoint=https://api.linkedin.com/uas/oauth/accessToken
-gatein.oauth.linkedin.authorizationURL=https://api.linkedin.com/uas/oauth/authenticate
+gatein.oauth.consumer.linkedin.enable=true
+gatein.oauth.consumer.linkedin.apiKey=75qjzvlua1657f
+gatein.oauth.consumer.linkedin.apiSecret=Nw0tjirXReiOeJkw
 
