EXOGTN-2006 OAuth authentication integration in PLF

--- a/component/web/pom.xml
+++ b/component/web/pom.xml
@@ -40,6 +40,7 @@
     <module>security-jboss</module>
     <module>oauth-common</module>
     <module>oauth-web</module>
+    <module>oauth-plf</module>
     <module>sso</module>
   </modules>
 </project>
